Fixed merch section on mobile view

--- a/styles/homepage.module.css
+++ b/styles/homepage.module.css
@@ -349,11 +349,16 @@
         justify-content: center;
         align-items: center;
         height: 1014px;
+        background-color: #504ABC;
     }
     .merchBookBtn2 {
         display: block;
     }
     .mobileBuyNow{
         display: block;
+    }
+    .merchDetails{
+        width: 100%;
+        align-items: center;
     }
 }
